--- a/emails/email-design-r8-alt1/email-solution-area-colors-illustrations-dark-blue-v2.html
+++ b/emails/email-design-r8-alt1/email-solution-area-colors-illustrations-dark-blue-v2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-[[widget:header]]
+[[widget:header-v2]]
 
 <table class="body">
 	<tr>
@@ -39,7 +39,7 @@
 										<table class="twelve columns">
 											<tr>
 												<td class="text-pad-left text-pad-right pb-15">
-													<h1 class="text-red"> Powerful, easy to use data<br>replication is
+													<h1 class="text-dark-blue"> Powerful, easy to use data<br>replication is
 														within your reach.
 													</h1>
 
@@ -54,7 +54,7 @@
 								</tr>
 							</table>
 
-							<table class="button button-red m-0">
+							<table class="button button-dark-blue m-0">
 								<tr>
 									<td>
 										<a href="#" class="text-underline">Register for the Webcast Now</a>
