--- a/emails/inbound-landing-page-email.html
+++ b/emails/inbound-landing-page-email.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width"/>
-	<link rel="stylesheet" href="/email/css/global.css">
-	<link rel="stylesheet" href="/email/css/dsg-global.css">
+	<link rel="stylesheet" href="/css/global.css">
+	<link rel="stylesheet" href="/css/dsg-global.css">
 </head>
 <body>
 
