--- a/emails/solution/email-solution-v3.html
+++ b/emails/solution/email-solution-v3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-[[widget:header]]
+[[widget:header-v2]]
 
 <table class="body">
 	<tr>
@@ -23,7 +23,7 @@
 									<td class="wrapper last p-0">
 										<table class="twelve columns">
 											<tr>
-												<td class="pb-0">
+												<td>
 													<img src="http://stage.software.dell.com/ecard/test/auditing/images/image1.jpg"/>
 												</td>
 												<td class="expander"></td>
@@ -35,17 +35,30 @@
 
 							<table class="row">
 								<tr>
-									<td class="wrapper last">
-										<table class="twelve columns">
+									<td class="wrapper p-0">
+										<table class="ten columns">
 											<tr>
-												<td class="text-pad-left text-pad-right pb-15">
-													<h1 class="text-red"> Powerful, easy to use data<br>replication is
-														within your reach.
+												<td class="text-pad-left text-pad-right">
+													<h1 class="text-dark-blue"> Powerful, easy to use data<br>replication is within your reach.
 													</h1>
 
-													<h5 class="mt-10"> Learn useful tips fo reducing costs and downtime<br>in this exclusive web
+													<h5 class="mt-10"> Learn useful tips fo reducing costs and downtime in<br>this exclusive web
 														cast.
 													</h5>
+												</td>
+												<td class="expander"></td>
+											</tr>
+										</table>
+									</td>
+									<td class="wrapper last">
+										<table class="two columns">
+											<tr>
+												<td class="center hide-for-small" align="center">
+													<center>
+														<a href="#">
+															<img src="http://software.dell.com/images/email/icon-endpt.png" class="center"/>
+														</a>
+													</center>
 												</td>
 												<td class="expander"></td>
 											</tr>
@@ -54,7 +67,7 @@
 								</tr>
 							</table>
 
-							<table class="button button-red m-0">
+							<table class="button button-dark-blue m-0">
 								<tr>
 									<td>
 										<a href="#" class="text-underline">Register for the Webcast Now</a>
@@ -67,12 +80,27 @@
 									<td class="wrapper p-0 bg-light-gray">
 										<table class="five columns">
 											<tr>
-												<td class="center pt-20 pb-20" align="center">
-													<center>
-														<a href="#">
-															<img src="http://software.dell.com/images/email/icon-document.png" class="center"/>
-														</a>
-													</center>
+												<td class="pt-10 text-pad-left">
+													<p class="text-size-14">Live webcast</p>
+
+													<p class="text-size-15">
+														<strong>Migration Upgrades and Platform Modernization</strong>
+													</p>
+
+													<br/>
+
+													<p class="text-size-14">Date</p>
+
+													<p class="text-size-15">
+														<strong>January 21, 2015</strong>
+													</p>
+													<br/>
+
+													<p class="text-size-14">Time</p>
+
+													<p class="text-size-14">
+														<strong>11 a.m. PT/ 2 p.m. ET</strong>
+													</p>
 												</td>
 												<td class="expander"></td>
 											</tr>
@@ -98,12 +126,13 @@
 															<td>
 																<a href="#">
 																	<span>
-																			 Read the White Paper
+																		Read the White Paper
 																	</span>
 																</a>
 															</td>
 														</tr>
 													</table>
+
 												</td>
 												<td class="expander"></td>
 											</tr>
@@ -138,7 +167,7 @@
 														<br>
 														<a href="#" class="text-white text-underline">
 															<span>
-																	 Watch the Video
+																Watch the Video
 															</span>
 														</a>
 													</cente>
