--- a/widgets/footer-localized-japanese.html
+++ b/widgets/footer-localized-japanese.html
@@ -28,7 +28,7 @@
 											<tr>
 												<td class="text-pad text-size-12">
 													<strong>
-														Oficina central de Dell Software
+														デル・ソフトウェア株式会社
 													</strong>
 													<br>
 													<span>
@@ -41,7 +41,7 @@
 														<tr>
 
 															<td width="150" align="left" class="p-0">
-																<a href="http://software.dell.com/company/contact-us.aspx"><strong>Cont&aacute;ctenos:</strong></a>
+																<a href="http://software.dell.com/company/contact-us.aspx"><strong>お問い合わせはこちらをクリック</strong></a>
 															</td>
 
 														</tr>
