adding option to hide the toolbar.

--- a/widgets/footer-v2.html
+++ b/widgets/footer-v2.html
@@ -92,6 +92,24 @@
 								</tr>
 							</table>
 
+						</td>
+					</tr>
+				</table>
+
+			</center>
+		</td>
+	</tr>
+</table>
+
+<table class="body">
+	<tr>
+		<td class="center" align="center" valign="top">
+			<center>
+
+				<table class="container">
+					<tr>
+						<td>
+
 							<table class="row bg-light-gray">
 								<tr>
 									<td class="wrapper last">
@@ -103,7 +121,7 @@
 															<a href="http://software.dell.com">Software.Dell.com</a> |
 															<a href="http://software.dell.com/legal/privacy.aspx">Privacy Statement</a> |
 															<a
-																href="https://ecomm.dell.com/GSC/ListRemoval/Index?returnPath=www.dell.com/content/topics/global.aspx/policy/en/country_specific&s=gen&~section=023&c=us&l=en">Unsubscribe
+																	href="https://ecomm.dell.com/GSC/ListRemoval/Index?returnPath=www.dell.com/content/topics/global.aspx/policy/en/country_specific&s=gen&~section=023&c=us&l=en">Unsubscribe
 																from Dell</a> |
 															<a href="http://software.dell.com/unsubscribe">Unsubscribe from Dell Software</a>
 														</div>
