re-arranged widgets file pattern.

--- a/emails/email-design-r8-alt1/email-solution-area-colors-illustrations-dark-blue-v2.html
+++ b/emails/email-design-r8-alt1/email-solution-area-colors-illustrations-dark-blue-v2.html
@@ -9,6 +9,8 @@
 
 [[widget:header-v2]]
 
+[[widget:headline]]
+
 <table class="body">
 	<tr>
 		<td class="center" align="center" valign="top">
@@ -17,50 +19,6 @@
 				<table class="container">
 					<tr>
 						<td>
-
-							<table class="row">
-								<tr>
-									<td class="wrapper last p-0">
-										<table class="twelve columns">
-											<tr>
-												<td class="pb-0">
-													<img src="http://stage.software.dell.com/ecard/test/auditing/images/image1.jpg"/>
-												</td>
-												<td class="expander"></td>
-											</tr>
-										</table>
-									</td>
-								</tr>
-							</table>
-
-							<table class="row">
-								<tr>
-									<td class="wrapper last">
-										<table class="twelve columns">
-											<tr>
-												<td class="text-pad-left text-pad-right pb-15">
-													<h1 class="text-dark-blue"> Powerful, easy to use data<br>replication is
-														within your reach.
-													</h1>
-
-													<h5 class="mt-10"> Learn useful tips fo reducing costs and downtime<br>in this exclusive web
-														cast.
-													</h5>
-												</td>
-												<td class="expander"></td>
-											</tr>
-										</table>
-									</td>
-								</tr>
-							</table>
-
-							<table class="button button-dark-blue m-0">
-								<tr>
-									<td>
-										<a href="#" class="text-underline">Register for the Webcast Now</a>
-									</td>
-								</tr>
-							</table>
 
 							<table class="row">
 								<tr>
