--- a/emails/solution/email-solution.html
+++ b/emails/solution/email-solution.html
@@ -75,6 +75,24 @@
 								</tr>
 							</table>
 
+						</td>
+					</tr>
+				</table>
+
+			</center>
+		</td>
+	</tr>
+</table>
+
+<table class="body">
+	<tr>
+		<td class="center" align="center" valign="top">
+			<center>
+
+				<table class="container">
+					<tr>
+						<td>
+
 							<table class="row">
 								<tr>
 									<td class="wrapper p-0 bg-light-gray">
