--- a/widgets/header-v3.html
+++ b/widgets/header-v3.html
@@ -9,30 +9,32 @@
 
 							<table class="row">
 								<tr>
-									<td class="wrapper p-0">
-										<table class="ten columns">
+									<td class="wrapper last p-0">
+										<table class="twelve columns">
 											<tr>
-												<td class="text-pad-left text-pad-right">
-													<h1 class="text-dark-blue"> Powerful, easy to use data<br>replication is within your reach.
-													</h1>
-
-													<h5 class="mt-10"> Learn useful tips fo reducing costs and downtime in<br>this exclusive web
-														cast.
-													</h5>
+												<td class="pb-0">
+													<img src="http://stage.software.dell.com/ecard/test/auditing/images/image1.jpg"/>
 												</td>
 												<td class="expander"></td>
 											</tr>
 										</table>
 									</td>
+								</tr>
+							</table>
+
+							<table class="row">
+								<tr>
 									<td class="wrapper last">
-										<table class="two columns">
+										<table class="twelve columns">
 											<tr>
-												<td class="center hide-for-small" align="center">
-													<center>
-														<a href="#">
-															<img src="http://software.dell.com/images/email/icon-endpt.png" class="center"/>
-														</a>
-													</center>
+												<td class="text-pad-left text-pad-right pb-15">
+													<h1 class="text-dark-blue"> Powerful, easy to use data<br>replication is
+														within your reach.
+													</h1>
+
+													<h5 class="mt-10"> Learn useful tips fo reducing costs and downtime<br>in this exclusive web
+														cast.
+													</h5>
 												</td>
 												<td class="expander"></td>
 											</tr>
