--- a/emails/solution/email-solution.html
+++ b/emails/solution/email-solution.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-[[widget:header-v2]]
+[[widget:branding-v2]]
 
 <table class="body">
 	<tr>
@@ -208,6 +208,7 @@
 </table>
 
 [[widget:footer-v2]]
+[[widget:unsubscribe]]
 
 <!-- Tracking Pixel -->
 <img src="http://activate.software.dell.com/no-content?at=7" width="1" height="1"/>
