--- a/emails/email-design-r8-alt1/email-solution-area-colors-illustrations-dark-blue-v2.html
+++ b/emails/email-design-r8-alt1/email-solution-area-colors-illustrations-dark-blue-v2.html
@@ -119,6 +119,7 @@
 </table>
 
 [[widget:footer-v2]]
+[[widget:unsubscribe]]
 
 <!-- Tracking Pixel -->
 <img src="http://activate.software.dell.com/no-content?at=7" width="1" height="1"/>
