offset by one column

--- a/emails/legal/email-legal.html
+++ b/emails/legal/email-legal.html
@@ -15,57 +15,25 @@
 
                 <table class="container">
                     <tr>
-                        <td>
+                        <td class="offset-by-one">
 
                             <table class="row text-size-13">
                                 <tr>
                                     <td class="wrapper">
 
-                                        <table class="twelve columns">
+                                        <table class="ten columns">
                                             <tr>
+
                                                 <td class="text-pad">
-                                                    <ul>
-                                                        <ol>
-                                                            Thank you for being a loyal customer of Quest Software.  We're
-                                                            pleased to tell you that Dell Software has created a new website for you that will
-                                                            replace quest.com, as of january 15, 2015.  You may now use the new website
-                                                            at <a href="http://software.dell.com">software.dell.com</a>.
-                                                        </ol>
-                                                        <ol>
-                                                            This new site features your favorite Quest products, which are now offered
-                                                            by Dell Software.  In addition, the new Dell Software Site offers many other products
-                                                            providing you with end-to-end solutions that simplify IT, mitigate risk and
-                                                            accelerate results.  If you had an account on quest.com, your log-in credentials for
-                                                            viewing educational materials, registering for events and downloading product
-                                                            trials will continue to work on <a href="http://software.dell.com">software.dell.com</a>.
-                                                        </ol>
-                                                        <ol>
-                                                            We are pleased to have you as part of the global Dell Software community.  We truly appreciate
-                                                            your business and the value you place in us.  Please visit <a href="http://software.dell.com">software.dell.com</a>
-                                                            today to discover the breadth of Dell Software offerings and experience our end-to-end IT solutions.
-                                                        </ol>
-                                                        <ol>
-                                                            Thank you for being a loyal customer of Quest Software.  We're
-                                                            pleased to tell you that Dell Software has created a new website for you that will
-                                                            replace quest.com, as of january 15, 2015.  You may now use the new website
-                                                            at <a href="http://software.dell.com">software.dell.com</a>.
-                                                        </ol>
-                                                        <ol>
-                                                            This new site features your favorite Quest products, which are now offered
-                                                            by Dell Software.  In addition, the new Dell Software Site offers many other products
-                                                            providing you with end-to-end solutions that simplify IT, mitigate risk and
-                                                            accelerate results.  If you had an account on quest.com, your log-in credentials for
-                                                            viewing educational materials, registering for events and downloading product
-                                                            trials will continue to work on <a href="http://software.dell.com">software.dell.com</a>.
-                                                        </ol>
-                                                        <ol>
-                                                            We are pleased to have you as part of the global Dell Software community.  We truly appreciate
-                                                            your business and the value you place in us.  Please visit <a href="http://software.dell.com">software.dell.com</a>
-                                                            today to discover the breadth of Dell Software offerings and experience our end-to-end IT solutions.
-                                                        </ol>
-                                                    </ul>
+                                                   $$Description
                                                 </td>
                                                 <td class="expander"></td>
+                                            </tr>
+                                        </table>
+                                        <table class="one columns">
+                                            <tr>
+                                                <td class="text-pad">
+                                                </td>
                                             </tr>
                                         </table>
 
