fix for android 4.4 gmail app.

--- a/widgets/footer-v2.html
+++ b/widgets/footer-v2.html
@@ -5,7 +5,7 @@
 
 				<table class="container">
 					<tr>
-						<td>
+						<td class="no-hyphens">
 
 							<table class="row bg-light-gray">
 								<tr>
@@ -28,7 +28,7 @@
 											<tr>
 												<td class="text-pad text-size-12">
 													<strong>
-														Dell Software
+														Dell&nbsp;Software
 													</strong>
 													<br>
 <span>
