--- a/widgets/unsubscribe.html
+++ b/widgets/unsubscribe.html
@@ -5,7 +5,7 @@
 
 				<table class="container">
 					<tr>
-						<td>
+						<td class="no-hyphens">
 
 							<table class="row bg-light-gray">
 								<tr>
@@ -20,10 +20,10 @@
 															<a
 																href="https://ecomm.dell.com/GSC/ListRemoval/Index?returnPath=www.dell.com/content/topics/global.aspx/policy/en/country_specific&s=gen&~section=023&c=us&l=en">Unsubscribe
 																from Dell</a> |
-															<a href="http://software.dell.com/unsubscribe">Unsubscribe from Dell Software</a>
+															<a href="http://software.dell.com/unsubscribe">Unsubscribe from Dell&nbsp;Software</a>
 														</div>
 														<div class="mt-5 text-size-12">
-															This email is an advertisement or solicitation from Dell Software.&copy;2015 Dell Inc. All
+															This email is an advertisement or solicitation from Dell&nbsp;Software. &copy;2015 Dell Inc. All
 															rights reserved.
 														</div>
 													</center>
