no-hyphen class added

--- a/widgets/footer-v2.html
+++ b/widgets/footer-v2.html
@@ -9,7 +9,7 @@
 
 							<table class="row bg-light-gray">
 								<tr>
-									<td class="wrapper no-hyphen">
+									<td class="wrapper hide-for-small">
 										<table class="five columns">
 											<tr>
 												<td class="text-pad pt-5">
@@ -26,7 +26,7 @@
 									<td class="wrapper last">
 										<table class="seven columns">
 											<tr>
-												<td class="text-pad text-size-12">
+												<td class="text-pad text-size-12 no-hyphen">
 													<strong>
 														Dell&nbsp;Software
 													</strong>
@@ -40,7 +40,7 @@
 													<table class="mso-table-fix" width="150" cellpadding="0" cellspacing="0" align="left">
 														<tr>
 
-															<td width="150" align="left" class="p-0">
+															<td width="150" align="left" class="p-0 no-hyphen">
 																<a href="http://software.dell.com/company/contact-us.aspx"><strong>Contact Us</strong></a>
 															</td>
 
@@ -50,7 +50,7 @@
 													<table class="mso-table-fix" width="150" cellpadding="0" cellspacing="0" align="left">
 														<tr>
 
-															<td width="100" align="left" class="p-0 text-size-12">
+															<td width="100" align="left" class="p-0 text-size-12 no-hyphen">
 																<strong>Follow Us:</strong>
 																<br>
 																<a href="https://www.facebook.com/DellSystemsManagement"
