--- a/emails/change-auditor/email-change-auditor-v2.html
+++ b/emails/change-auditor/email-change-auditor-v2.html
@@ -198,7 +198,9 @@
 								</tr>
 							</table>
 
+							<!-- Hides for Microsoft Outlook-->
 							<!--[if !mso]><!-->
+							<!-- Only visible for mobile -->
 							<div class="show-for-small">
 								<table class="row text-size-13">
 									<tr>
