--- a/emails/elnaz/auto-responder/1-download-trial-box-desk-backup-1.html
+++ b/emails/elnaz/auto-responder/1-download-trial-box-desk-backup-1.html
@@ -51,31 +51,33 @@
             <td>
               <table class="row">
                 <tr>
-                  <td class="wrapper last">
-                    <table class="twelve columns">
+                  <td class="wrapper valign-middle">
+                    <table class="six columns">
                       <tr>
-                        <td class="center" align="center">
-                          <center>
-                            <table>
-                              <tr>
-                                <td class="valign-middle">
-                                  <table class="button button-blue button-width-auto mt-0 mb-0">
-                                    <tr>
-                                      <td>
-                                        <a href="#">Download Free Trial</a>
-                                      </td>
-                                    </tr>
-                                  </table>
-                                  <p class="mt-20"><a href="#">Release Notes and Guides</a></p>
-                                </td>
-                                <td>
-                                  <a href="#">
-                                    <img class="ml-20" alt="text" src="../../../images/150x150.png">
-                                  </a>
-                                </td>
-                              </tr>
-                            </table>
-                          </center>
+                        <td class="center">
+                          <table class="button button-blue button-width-auto mt-0 mb-0">
+                            <tr>
+                              <td>
+                                <a href="#">Download Free Trial</a>
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td class="center">
+                          <a href="#">Release Notes and Guides</a>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                  <td class="wrapper last pt-0">
+                    <table class="six columns">
+                      <tr>
+                        <td class="center">
+                          <a href="#">
+                            <img alt="text" src="../../../images/150x150.png">
+                          </a>
                         </td>
                       </tr>
                     </table>
@@ -163,7 +165,7 @@
     </td>
   </tr>
 </table>
-<!--<table class="body">
+<table class="body">
   <tr>
     <td class="center" align="center" valign="top">
       <center>
@@ -205,7 +207,7 @@
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
                           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                            eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
+                            eget dolor. Aenean massa. Cum sociis natoque penatibus  </p>
                         </td>
                       </tr>
                     </table>
@@ -227,7 +229,7 @@
                       <tr>
                         <td class="nine sub-columns">
                           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                            eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
+                            eget dolor. Aenean massa. Cum sociis natoque penatibus  </p>
                         </td>
                         <td class="three sub-columns"></td>
                       </tr>
@@ -238,60 +240,6 @@
             </td>
           </tr>
         </table>
-      </center>
-    </td>
-  </tr>
-</table>-->
-<table class="body">
-  <tr>
-    <td class="center" align="center" valign="top">
-      <center>
-
-        <table class="container">
-          <tr>
-            <td>
-              <table class="row text-size-13 border-t-grey">
-                <tr>
-                  <td class="wrapper last">
-                    <table class="twelve columns">
-                      <tr>
-                        <td>
-                          <p class="pt-10"><strong class="text-size-17">Next Steps</strong></p>
-                        </td>
-                        <td class="expander"></td>
-                      </tr>
-                      <tr>
-                        <td class="center" align="center">
-                          <center>
-                            <table>
-                              <tr>
-                                <td>
-                                  <img class="img-border" src="../../../images/ns-1.png" alt=""/><br>
-                                  <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer adipiscing</a><br>
-                                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                                    eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
-                                </td>
-                                <td class="expander"></td>
-                                <td>
-                                  <img class="img-border" src="../../../images/ns-1.png" alt=""/>
-                                  <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer adipiscing</a>
-                                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                                    eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
-                                </td>
-                                <td class="expander"></td>
-                              </tr>
-                            </table>
-                          </center>
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        </table>
-
       </center>
     </td>
   </tr>
