--- a/emails/elnaz/auto-responder/1-download-trial-box-desk.html
+++ b/emails/elnaz/auto-responder/1-download-trial-box-desk.html
@@ -119,6 +119,7 @@
     </td>
   </tr>
 </table>
+
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top">
@@ -250,6 +251,7 @@
         <table class="container">
           <tr>
             <td>
+	            <!-- Title -->
               <table class="row text-size-13 border-t-grey">
                 <tr>
                   <td class="wrapper last">
@@ -260,34 +262,48 @@
                         </td>
                         <td class="expander"></td>
                       </tr>
-                      <tr>
-                        <td class="center" align="center">
-                          <center>
-                            <table>
-                              <tr>
-                                <td>
-                                  <img class="img-border" src="../../../images/ns-1.png" alt=""/><br>
-                                  <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer adipiscing</a><br>
-                                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                                    eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
-                                </td>
-                                <td class="expander"></td>
-                                <td>
-                                  <img class="img-border" src="../../../images/ns-1.png" alt=""/>
-                                  <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer adipiscing</a>
-                                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
-                                    eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
-                                </td>
-                                <td class="expander"></td>
-                              </tr>
-                            </table>
-                          </center>
-                        </td>
-                      </tr>
                     </table>
                   </td>
                 </tr>
               </table>
+
+	            <table class="row text-size-13">
+		            <tr>
+			            <td class="wrapper offset-by-one">
+				            <table class="five columns">
+					            <tr>
+						            <td>
+							            <div class="clearfix img-center-sm">
+								            <img class="img-border" src="../../../images/ns-1.png" alt=""/>
+							            </div>
+							            <div class="clearfix">
+								            <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer adipiscing</a><br>
+								            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+									            eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
+							            </div>
+						            </td>
+					            </tr>
+				            </table>
+			            </td>
+			            <td class="wrapper last">
+				            <table class="five columns">
+					            <tr>
+						            <td>
+							            <div class="clearfix img-center-sm">
+								            <img class="img-border" src="../../../images/ns-1.png" alt=""/>
+							            </div>
+							            <div class="clearfix">
+								            <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer adipiscing</a><br>
+								            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+									            eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
+							            </div>
+						            </td>
+					            </tr>
+				            </table>
+			            </td>
+		            </tr>
+	            </table>
+
             </td>
           </tr>
         </table>
