--- a/emails/change-auditor/email-change-auditor-v2.html
+++ b/emails/change-auditor/email-change-auditor-v2.html
@@ -61,6 +61,7 @@
 					<tr>
 						<td>
 
+							<!-- Only visible on desktop -->
 							<table class="row text-size-13 hide-for-small">
 								<tr>
 									<td class="wrapper">
