found a solution for centering event banner but having issues with gmail and outlook 2010,2013

--- a/emails/elnaz/auto-responder/in-person-event.htm
+++ b/emails/elnaz/auto-responder/in-person-event.htm
@@ -52,62 +52,83 @@
         <table class="container">
           <tr>
             <td>
-              <table class="row pt-30 pb-30 row-blue">
+              <table class="row pt-10 pb-10 row-blue">
                 <tr>
-                  <td>
-                    <table class="six columns">
+                  <td class="wrapper last">
+                    <table class="twelve columns">
                       <tr>
-                        <td class="eight sub-columns"></td>
-                        <td class="four sub-columns">
-                          <img src="http://stage.software.dell.com/images/email/icon-calendar.png">
+                        <td class="center">
+                          <center>
+                            <table>
+                              <tr>
+                                <td class="text-pad">
+                                  <img class="mr-20"
+                                       src="http://stage.software.dell.com/images/email/icon-calendar.png">
+
+                                  <div class="text-white pull-right">
+                                    <h1 class="text-white">Save the date</h1>
+
+                                    <p class="mb-0">Date: Sept 29, 2015</p>
+
+                                    <p class="mb-0">Time: 3:00 PM EDT</p>
+
+                                    <p class="mb-0">Location: Houston, TX</p>
+
+                                    <p class="mb-0">Event: In Person</p>
+
+                                    <div class="hide-for-small">
+                                      <table class="button button-green button-width-auto mt-10 mb-0">
+                                        <tr>
+                                          <td>
+                                            <a href="#">Add to Your Calendar</a>
+                                          </td>
+                                        </tr>
+                                      </table>
+                                    </div>
+                                  </div>
+                                </td>
+                              </tr>
+                            </table>
+                          </center>
                         </td>
+                        <td class="expander"></td>
                       </tr>
                     </table>
                   </td>
-                  <td class="pt-0">
-                    <table class="six columns">
-                      <tr>
-                        <td class="twelve sub-columns text-white text-pad">
-                          <h1 class="text-white">Save the date</h1>
-
-                          <p class="mb-0">Date: Sept 29, 2015</p>
-
-                          <p class="mb-0">Time: 3:00 PM EDT</p>
-
-                          <p class="mb-0">Location: Houston, TX</p>
-
-                          <p class="mb-0">Event: In Person</p>
-
-                          <div class="hide-for-small">
-                            <table class="button button-green button-width-auto mt-10 mb-0">
+                </tr>
+              </table>
+              <!-- Hides for Microsoft Outlook-->
+              <!--[if !mso]><!-->
+              <!-- Only visible for mobile -->
+              <div class="show-for-small">
+                <table class="row row-blue">
+                  <tr>
+                    <td class="wrapper last">
+                      <table class="twelve columns">
+                        <tbody>
+                        <tr>
+                          <td class="text-pad">
+                            <!--[if !mso]><!-->
+                            <table class="medium button button-green button-width-auto mb-0 mt-0">
+                              <tbody>
                               <tr>
                                 <td>
                                   <a href="#">Add to Your Calendar</a>
                                 </td>
                               </tr>
+                              </tbody>
                             </table>
-                          </div>
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-                <!-- Hides for Microsoft Outlook-->
-                <!--[if !mso]><!-->
-                <!-- Only visible for mobile -->
-                <tr>
-                  <td class="wrapper last text-pad" colspan="2">
-                    <table class="button button-green button-width-auto mt-0 mb-0">
-                      <tr>
-                        <td>
-                          <a href="#">Add to Your Calendar</a>
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-                <!--<![endif]-->
-              </table>
+                            <!--<![endif]-->
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                </table>
+              </div>
+              <!--<![endif]-->
               <table class="row text-size-13 mt-20">
                 <tr>
                   <td class="wrapper last">
