--- a/emails/elnaz/auto-responder/in-person-event.htm
+++ b/emails/elnaz/auto-responder/in-person-event.htm
@@ -52,46 +52,42 @@
         <table class="container">
           <tr>
             <td>
-              <table class="row pt-10 pb-10 row-blue">
+              <table class="row pt-30 pb-30 row-blue hide-for-small">
                 <tr>
-                  <td class="wrapper last">
-                    <table class="twelve columns">
+                  <td>
+                    <table class="six columns">
                       <tr>
-                        <td class="center">
-                          <center>
-                            <table>
+                        <td class="eight sub-columns"></td>
+                        <td class="four sub-columns">
+                          <img src="http://stage.software.dell.com/images/email/icon-calendar.png">
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                  <td class="pt-0">
+                    <table class="six columns">
+                      <tr>
+                        <td class="twelve sub-columns text-white text-pad">
+                          <h1 class="text-white">Save the date</h1>
+
+                          <p class="mb-0">Date: Sept 29, 2015</p>
+
+                          <p class="mb-0">Time: 3:00 PM EDT</p>
+
+                          <p class="mb-0">Location: Houston, TX</p>
+
+                          <p class="mb-0">Event: In Person</p>
+
+                          <div class="hide-for-small">
+                            <table class="button button-green button-width-auto mt-10 mb-0">
                               <tr>
-                                <td class="text-pad">
-                                  <img class="mr-20"
-                                       src="http://stage.software.dell.com/images/email/icon-calendar.png">
-
-                                  <div class="text-white pull-right">
-                                    <h1 class="text-white">Save the date</h1>
-
-                                    <p class="mb-0">Date: Sept 29, 2015</p>
-
-                                    <p class="mb-0">Time: 3:00 PM EDT</p>
-
-                                    <p class="mb-0">Location: Houston, TX</p>
-
-                                    <p class="mb-0">Event: In Person</p>
-
-                                    <div class="hide-for-small">
-                                      <table class="button button-green button-width-auto mt-10 mb-0">
-                                        <tr>
-                                          <td>
-                                            <a href="#">Add to Your Calendar</a>
-                                          </td>
-                                        </tr>
-                                      </table>
-                                    </div>
-                                  </div>
+                                <td>
+                                  <a href="#">Add to Your Calendar</a>
                                 </td>
                               </tr>
                             </table>
-                          </center>
+                          </div>
                         </td>
-                        <td class="expander"></td>
                       </tr>
                     </table>
                   </td>
@@ -101,28 +97,49 @@
               <!--[if !mso]><!-->
               <!-- Only visible for mobile -->
               <div class="show-for-small">
-                <table class="row row-blue">
+                <table class="row pt-30 pb-30 row-blue">
                   <tr>
                     <td class="wrapper last">
                       <table class="twelve columns">
-                        <tbody>
                         <tr>
-                          <td class="text-pad">
-                            <!--[if !mso]><!-->
-                            <table class="medium button button-green button-width-auto mb-0 mt-0">
-                              <tbody>
-                              <tr>
-                                <td>
-                                  <a href="#">Add to Your Calendar</a>
-                                </td>
-                              </tr>
-                              </tbody>
-                            </table>
-                            <!--<![endif]-->
+                          <td class="center">
+                            <center>
+                              <table>
+                                <tr>
+                                  <td class="text-pad">
+                                    <img class="mr-20" src="http://stage.software.dell.com/images/email/icon-calendar.png">
+
+                                    <div class="text-white" style="float:right">
+                                      <h1 class="text-white">Save the date</h1>
+
+                                      <p class="mb-0">Date: Sept 29, 2015</p>
+
+                                      <p class="mb-0">Time: 3:00 PM EDT</p>
+
+                                      <p class="mb-0">Location: Houston, TX</p>
+
+                                      <p class="mb-0">Event: In Person</p>
+                                    </div>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td class="text-pad">
+                                    <table class="medium button button-green button-width-auto">
+                                      <tbody>
+                                      <tr>
+                                        <td>
+                                          <a href="#">Add to Your Calendar</a>
+                                        </td>
+                                      </tr>
+                                      </tbody>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </table>
+                            </center>
                           </td>
                           <td class="expander"></td>
                         </tr>
-                        </tbody>
                       </table>
                     </td>
                   </tr>
