--- a/emails/elnaz/auto-responder/in-person-event.htm
+++ b/emails/elnaz/auto-responder/in-person-event.htm
@@ -107,32 +107,18 @@
                               <table>
                                 <tr>
                                   <td class="text-pad">
-                                    <img class="mr-20" src="http://stage.software.dell.com/images/email/icon-calendar.png">
-
-                                    <div class="text-white" style="float:right">
-                                      <h1 class="text-white">Save the date</h1>
-
-                                      <p class="mb-0">Date: Sept 29, 2015</p>
-
-                                      <p class="mb-0">Time: 3:00 PM EDT</p>
-
-                                      <p class="mb-0">Location: Houston, TX</p>
-
-                                      <p class="mb-0">Event: In Person</p>
-                                    </div>
+                                    <img src="http://stage.software.dell.com/images/email/icon-calendar.png">
                                   </td>
-                                </tr>
-                                <tr>
-                                  <td class="text-pad">
-                                    <table class="medium button button-green button-width-auto">
-                                      <tbody>
-                                      <tr>
-                                        <td>
-                                          <a href="#">Add to Your Calendar</a>
-                                        </td>
-                                      </tr>
-                                      </tbody>
-                                    </table>
+                                  <td>
+                                    <h1 class="text-white">Save the date</h1>
+
+                                    <p class="mb-0">Date: Sept 29, 2015</p>
+
+                                    <p class="mb-0">Time: 3:00 PM EDT</p>
+
+                                    <p class="mb-0">Location: Houston, TX</p>
+
+                                    <p class="mb-0">Event: In Person</p>
                                   </td>
                                 </tr>
                               </table>
@@ -143,6 +129,15 @@
                       </table>
                     </td>
                   </tr>
+                </table>
+                <table class="button button-green row-blue">
+                  <tbody>
+                  <tr>
+                    <td>
+                      <a href="#">Add to Your Calendar</a>
+                    </td>
+                  </tr>
+                  </tbody>
                 </table>
               </div>
               <!--<![endif]-->
