--- a/emails/elnaz/auto-responder/in-person-event.htm
+++ b/emails/elnaz/auto-responder/in-person-event.htm
@@ -52,64 +52,20 @@
         <table class="container">
           <tr>
             <td>
-              <table class="row pt-30 pb-30 row-blue hide-for-small">
+              <table class="row pt-10 pb-10 row-blue">
                 <tr>
-                  <td>
-                    <table class="six columns">
+                  <td class="wrapper last">
+                    <table class="twelve columns">
                       <tr>
-                        <td class="eight sub-columns"></td>
-                        <td class="four sub-columns">
-                          <img src="http://stage.software.dell.com/images/email/icon-calendar.png">
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
-                  <td class="pt-0">
-                    <table class="six columns">
-                      <tr>
-                        <td class="twelve sub-columns text-white text-pad">
-                          <h1 class="text-white">Save the date</h1>
-
-                          <p class="mb-0">Date: Sept 29, 2015</p>
-
-                          <p class="mb-0">Time: 3:00 PM EDT</p>
-
-                          <p class="mb-0">Location: Houston, TX</p>
-
-                          <p class="mb-0">Event: In Person</p>
-
-                          <div class="hide-for-small">
-                            <table class="button button-green button-width-auto mt-10 mb-0">
+                        <td class="center">
+                          <center>
+                            <table>
                               <tr>
-                                <td>
-                                  <a href="#">Add to Your Calendar</a>
-                                </td>
-                              </tr>
-                            </table>
-                          </div>
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-              </table>
-              <!-- Hides for Microsoft Outlook-->
-              <!--[if !mso]><!-->
-              <!-- Only visible for mobile -->
-              <div class="show-for-small">
-                <table class="row pt-30 pb-30 row-blue">
-                  <tr>
-                    <td class="wrapper last">
-                      <table class="twelve columns">
-                        <tr>
-                          <td class="center">
-                            <center>
-                              <table>
-                                <tr>
-                                  <td class="text-pad">
-                                    <img src="http://stage.software.dell.com/images/email/icon-calendar.png">
-                                  </td>
-                                  <td>
+                                <td class="text-pad">
+                                  <img class="mr-20"
+                                       src="http://stage.software.dell.com/images/email/icon-calendar.png">
+
+                                  <div class="text-white pull-right">
                                     <h1 class="text-white">Save the date</h1>
 
                                     <p class="mb-0">Date: Sept 29, 2015</p>
@@ -119,25 +75,57 @@
                                     <p class="mb-0">Location: Houston, TX</p>
 
                                     <p class="mb-0">Event: In Person</p>
-                                  </td>
-                                </tr>
-                              </table>
-                            </center>
+
+                                    <div class="hide-for-small">
+                                      <table class="button button-green button-width-auto mt-10 mb-0">
+                                        <tr>
+                                          <td>
+                                            <a href="#">Add to Your Calendar</a>
+                                          </td>
+                                        </tr>
+                                      </table>
+                                    </div>
+                                  </div>
+                                </td>
+                              </tr>
+                            </table>
+                          </center>
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+              <!-- Hides for Microsoft Outlook-->
+              <!--[if !mso]><!-->
+              <!-- Only visible for mobile -->
+              <div class="show-for-small">
+                <table class="row row-blue">
+                  <tr>
+                    <td class="wrapper last">
+                      <table class="twelve columns">
+                        <tbody>
+                        <tr>
+                          <td class="text-pad">
+                            <!--[if !mso]><!-->
+                            <table class="medium button button-green button-width-auto mb-0 mt-0">
+                              <tbody>
+                              <tr>
+                                <td>
+                                  <a href="#">Add to Your Calendar</a>
+                                </td>
+                              </tr>
+                              </tbody>
+                            </table>
+                            <!--<![endif]-->
                           </td>
                           <td class="expander"></td>
                         </tr>
+                        </tbody>
                       </table>
                     </td>
                   </tr>
-                </table>
-                <table class="button button-green row-blue">
-                  <tbody>
-                  <tr>
-                    <td>
-                      <a href="#">Add to Your Calendar</a>
-                    </td>
-                  </tr>
-                  </tbody>
                 </table>
               </div>
               <!--<![endif]-->
