added existing widgets from prod fixed spacing in outlook having issues with cropping image

--- a/emails/elnaz/auto-responder/in-person-event.htm
+++ b/emails/elnaz/auto-responder/in-person-event.htm
@@ -4,6 +4,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="/css/global.css">
+  <style>
+    .pdf {
+      background: url('http://software.dell.com/documents/images/us-cellular-casestudy-29818.jpg') center center;
+    }
+  </style>
 </head>
 <body>
 
@@ -53,6 +58,12 @@
           <tr>
             <td>
               <table class="row pt-30 pb-30 row-blue hide-for-small">
+                <!--[if gte mso 9]>
+                <tr>
+                  <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
+                  <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
+                </tr>
+                <![endif]-->
                 <tr>
                   <td>
                     <table class="six columns">
@@ -77,7 +88,9 @@
                           <p class="mb-0">Location: Houston, TX</p>
 
                           <p class="mb-0">Event: In Person</p>
-
+                          <!--[if gte mso 9]>
+                            <img src="http://software.dell.com/images/email/blank.gif" height="10">
+                          <![endif]-->
                           <div class="hide-for-small">
                             <table class="button button-green button-width-auto mt-10 mb-0">
                               <tr>
@@ -92,6 +105,12 @@
                     </table>
                   </td>
                 </tr>
+                <!--[if gte mso 9]>
+                <tr>
+                  <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
+                  <td><img src="http://software.dell.com/images/email/blank.gif" width="10"></td>
+                </tr>
+                <![endif]-->
               </table>
               <!-- Hides for Microsoft Outlook-->
               <!--[if !mso]><!-->
@@ -107,14 +126,15 @@
                               <table>
                                 <tr>
                                   <td class="text-pad">
-                                    <img class="mr-20" src="http://stage.software.dell.com/images/email/icon-calendar.png">
+                                    <img class="mr-20"
+                                         src="http://stage.software.dell.com/images/email/icon-calendar.png">
 
                                     <div class="text-white pull-right">
                                       <h1 class="text-white">Save the date</h1>
 
                                       <p class="mb-0">Date: Sept 29, 2015</p>
 
-                                      <p class="mb-0">Time: 3:00 PM EDT</p>
+                                      <p class="mb-0">Time: 3&#58;46 PM EDT</p>
 
                                       <p class="mb-0">Location: Houston, TX</p>
 
@@ -203,16 +223,28 @@
                       <tr>
                         <td class="center">
                           <span class="mr-20 valign-super">Share</span>
+                          <!--[if gte mso 9]>
+                          <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                          <![endif]-->
                           <a href="#" class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-google.png" alt="google"/>
                           </a>
+                          <!--[if gte mso 9]>
+                          <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                          <![endif]-->
                           <a href="#" class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-twitter.png" alt="twitter"/>
                           </a>
+                          <!--[if gte mso 9]>
+                          <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                          <![endif]-->
                           <a href="#" class="inline-block mr-20">
                             <img src="http://stage.software.dell.com/images/email/icon-linkedin.png" alt="linkedin"/>
                           </a>
-                          <a href="#" class="inline-block mr-20">
+                          <!--[if gte mso 9]>
+                          <img src="http://software.dell.com/images/email/blank.gif" width="10">
+                          <![endif]-->
+                          <a href="#" class="inline-block">
                             <img src="http://stage.software.dell.com/images/email/icon-facebook.png" alt="facebook"/>
                           </a>
                         </td>
@@ -262,7 +294,8 @@
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <img class="img-border" src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
+                          <img class="img-border center-block"
+                               src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
                       </tr>
                       <tr>
@@ -284,8 +317,12 @@
                     <table class="six columns">
                       <tr>
                         <td class="nine sub-columns">
-                          <img class="img-border"
-                               src="http://software.dell.com/documents/images/us-cellular-casestudy-29818.jpg" alt=""/>
+                          <!--<div class="img-border img-crop">
+                            <img class="img-responsive center-block"
+                                 src="http://software.dell.com/documents/images/us-cellular-casestudy-29818.jpg"
+                                 alt=""/>
+                          </div>-->
+                          <div class="pdf img-cover"></div>
                         </td>
                         <td class="three sub-columns"></td>
                       </tr>
@@ -325,7 +362,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border"
+                                        <img class="img-border center-block"
                                              src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
@@ -376,8 +413,12 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border"
-                                             src="http://stage.software.dell.com/images/email/ns-1.png" alt=""/>
+                                        <!--<div class="img-crop img-border">
+                                          <img class="img-responsive center-block"
+                                               src="http://software.dell.com/documents/images/us-cellular-casestudy-29818.jpg"
+                                               alt=""/>
+                                        </div>-->
+                                        <div class="pdf img-cover"></div>
                                       </td>
                                       <td class="three sub-columns"></td>
                                     </tr>
